[package]
name = "arp-attacker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.2", features = ["derive"] }
arp-toolkit = {version="0.3.2", features=["sync"]}
ipnet = "2.9.0"
[dependencies.pnet]
version = "0.34.0"
